tests/checker/fail/function_returns_wrong_type.can
message = () => Int {
    "not an int"
}

Unit => Program {
    "ok".print()
}
